Fixed alignment in a cases page

--- a/frontend/public/css/cases.css
+++ b/frontend/public/css/cases.css
@@ -15,6 +15,8 @@ nav {
 
 main {
     width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 h2 {
@@ -27,6 +29,10 @@ a {
 
 a:hover {
     color: #808080;
+}
+
+h1 {
+    width: 90%;
 }
 
 .success {
@@ -49,9 +55,9 @@ a:hover {
 
 #container {
     width: 90%;
-    margin: auto;
-    padding: 3%;
-    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .case-header {
@@ -71,10 +77,10 @@ a:hover {
 
 .tabs {
     display: flex;
-    gap: 10px;
-    margin: 20px 0;
+    justify-content: center;
+    width: 100%;
     border-bottom: 1px solid #2c2d36;
-    padding-bottom: 10px;
+    margin: 2% 0;
 }
 
 .tab-btn {
@@ -92,21 +98,21 @@ a:hover {
 
 #cases-container {
     background-color: #2c2d36;
-    padding: 20px;
-    margin: 20px 0;
     text-align: left;
     border-radius: 4px;
+    width: 23%;
+    padding: 1%;
 }
 
 .case-details-sidebar {
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 300px;
+    width: 25%;
     height: 100%;
     background-color: #2c2d36;
-    padding: 20px;
     overflow-y: auto;
+}
+
+#tab-content {
+    width: 50%;
 }
 
 .hidden {
